Style the feed reader

--- a/src/content/layout.css
+++ b/src/content/layout.css
@@ -1,5 +1,64 @@
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+* {
+  margin: 0;
+}
+
+body {
+  box-sizing: border-box;
+  margin: var(--gap-medium);
+  line-height: 1.5;
+  font-size: larger;
+}
+@media (max-width: 120ch) {
+  body {
+    font-size: inherit;
+  }
+}
+
+form {
+  margin-bottom: var(--gap-medium);
+}
+
+details {
+  padding-bottom: var(--gap-smaller);
+  padding-left: var(--gap-small);
+  padding-right: var(--gap-small);
+}
+
 textarea {
+  padding-top: var(--gap-smaller);
+  padding-bottom: var(--gap-smaller);
+  padding-left: var(--gap-small);
+  padding-right: var(--gap-small);
+  margin-top: var(--gap-small);
+  margin-bottom: var(--gap-small);
   display: block;
   width: 100%;
   min-height: 8lh;
+}
+
+ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+button,
+input[type='submit'] {
+  padding: var(--gap-smaller) var(--gap-small);
+}
+
+dl {
+  font-size: smaller;
+  dt {
+    float: left;
+    clear: left;
+    text-align: right;
+  }
+  dt::after {
+    content: ':\00a0';
+  }
 }
